# dart-pdfium

./: .gitignore  BUILD.gn  CMakeLists.txt  DEPS  README.md  build.sh  compile.sh  dart.gclient  flutter.dart.patch  flutter.patch  libjpeg_turbo.ios.patch  pdfium-flutter.args.gn  pdfium-mac.args.gn  pdfium.args.gn  pdfium.ios.patch  pubspec.yaml
example/: dart_pdfium_example.dart
lib/: BUILD.gn  dart_pdfium.dart  flutter.dart  normal.dart  pdfium.cc  pdfium.dart  pdfium.gni  pdfium.h  pdfium_impl.dart
scripts/: xcode_backend.sh
src/: pdfium.cc
test/: dart_pdfium_test.dart
