source_set("pdfium") {
  sources = [
    "pdfium.cc",
    "pdfium.h",
  ]

  deps = [
    "//third_party/dart/runtime:dart_api",
    "//third_party/dart/runtime/bin:dart_io_api",
    "//third_party/tonic",
  ]

  configs += [ "//third_party/dart/runtime:dart_config" ]

  public_configs = [ "$flutter_root:config" ]
}
