source_set("pdfium") {
  sources = [
    "pdfium.cc",
    "pdfium.h",
  ]
  
  deps = [
    "//third_party/dart/runtime:dart_api",
  ]

  include_dirs = ["//third_party/pdfium/public/"]

  if (is_mac) {
    lib_dirs = ["//third_party/pdfium/mac_x64/"]
  }

  if (is_ios) {
    lib_dirs = ["//third_party/pdfium/combined/"]
  }

  libs = ["pdfium"]

  configs += [ "//third_party/dart/runtime:dart_config" ]

  public_configs = [ "$flutter_root:config" ]
}
