# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

dart_pdfium_files = [
  "$flutter_root/lib/pdfium/pdfium_impl.dart",
  "$flutter_root/lib/pdfium/pdfium.dart",
]

dart_pdfium_path = "$flutter_root/lib/pdfium/pdfium.dart"
